[gd_scene load_steps=18 format=3 uid="uid://c660q6dy77bid"]

[ext_resource type="Script" path="res://Scripts/level.gd" id="1_gfgbn"]
[ext_resource type="Texture2D" uid="uid://c311p8qlyy43p" path="res://Assets/background.png" id="2_3grc3"]
[ext_resource type="PackedScene" uid="uid://bg358owmjt0nd" path="res://Prefabs/controlable_log.tscn" id="3_x41dl"]
[ext_resource type="PackedScene" uid="uid://c117y2p32fcoe" path="res://Prefabs/axe.tscn" id="4_bo6bn"]
[ext_resource type="PackedScene" uid="uid://37gimblvsp3a" path="res://Prefabs/knife_spawner.tscn" id="5_jm2qd"]
[ext_resource type="PackedScene" uid="uid://dpfvaog00h344" path="res://Prefabs/knife1.tscn" id="6_ef5y7"]
[ext_resource type="PackedScene" uid="uid://cd33nwuvka2iv" path="res://Prefabs/knife2.tscn" id="7_eypqp"]
[ext_resource type="PackedScene" uid="uid://dcprufup3r8po" path="res://Prefabs/knife3.tscn" id="8_je86j"]
[ext_resource type="PackedScene" uid="uid://c2csg304hwj0h" path="res://Prefabs/knife4.tscn" id="9_64ld7"]
[ext_resource type="PackedScene" uid="uid://dkqsu5lq8vbdp" path="res://Prefabs/knife5.tscn" id="10_1bblh"]
[ext_resource type="PackedScene" uid="uid://drtqj5smegp0g" path="res://Prefabs/knife6.tscn" id="11_4drcf"]
[ext_resource type="PackedScene" uid="uid://7ojmonacclix" path="res://Prefabs/knife7.tscn" id="12_8iwab"]
[ext_resource type="PackedScene" uid="uid://dlref010ihaa" path="res://Prefabs/knife8.tscn" id="13_11132"]
[ext_resource type="PackedScene" uid="uid://co6tueynsyh3a" path="res://Prefabs/knife9.tscn" id="14_vhhao"]
[ext_resource type="PackedScene" uid="uid://tqd4r078786i" path="res://Prefabs/knife10.tscn" id="15_hmd58"]
[ext_resource type="PackedScene" uid="uid://bbs35tb06o5t4" path="res://Prefabs/knife11.tscn" id="16_d5kni"]
[ext_resource type="PackedScene" uid="uid://k73wsgc21fiv" path="res://Prefabs/knife_empty.tscn" id="17_n3pdw"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_gfgbn")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(1.905, 1.905)
texture = ExtResource("2_3grc3")

[node name="ControlableLog" parent="." instance=ExtResource("3_x41dl")]

[node name="HealthComponent" parent="ControlableLog" index="2"]
max_health = 13.0
cur_health = 13.0

[node name="Axe" parent="ControlableLog" instance=ExtResource("4_bo6bn")]
position = Vector2(3, -113)
rotation = 1.74533

[node name="DamageboxComponent" parent="ControlableLog/Axe" index="0"]
monitoring = false

[node name="Camera2D" type="Camera2D" parent="."]

[node name="KnifeSpawner" parent="." instance=ExtResource("5_jm2qd")]
knives = Array[PackedScene]([ExtResource("6_ef5y7"), ExtResource("7_eypqp"), ExtResource("8_je86j"), ExtResource("9_64ld7"), ExtResource("10_1bblh"), ExtResource("11_4drcf"), ExtResource("12_8iwab"), ExtResource("13_11132"), ExtResource("14_vhhao"), ExtResource("15_hmd58"), ExtResource("16_d5kni"), ExtResource("17_n3pdw")])
positions = Array[Vector2]([Vector2(0.5, 0.5), Vector2(1.5, 1.5)])
types = Array[int]([8, 9])
spawn_time = 0.01

[editable path="ControlableLog"]
[editable path="ControlableLog/Axe"]
